--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <img src="Images/logo.png" alt="">
         </figure>
         <nav>
-            <a href="">Home</a>
-            <a href="">Contacts</a>
-            <a href="">Info</a>
+            <a href="#">Home</a>
+            <a href="#">Contacts</a>
+            <a href="#">Info</a>
         </nav>
     </header>
 
